<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="color_ui_title">Color Settings</string>
    <string name="pref_category_color">Change Keypad Colors</string>
    <string name="pref_choose_all">Change All Keypad Colors At Once</string>
    <string name="pref_choose_single">Change Each Keypad Color Individually</string>
    <string name="pref_reset_category">Use this to apply color changes</string>
    <string name="pref_all_key_colors">Change All Keys At Once</string>
    <string name="pref_key_single_colors">Change Individual Key Colors</string>
    <string name="all_keys_pref">One Color, All Keys</string>
    <string name="all_keys_pref_summary">If checked, will apply the Dialpad Keys Color to all keys</string>
    <string name="dialpad_color_pref_all">Dialpad Keys Color</string>
    <string name="dialpad_color_pref_one">Number 1 Key Color</string>
    <string name="dialpad_color_pref_two">Number 2 Key Color</string>
    <string name="dialpad_color_pref_three">Number 3 Key Color</string>
    <string name="dialpad_color_pref_four">Number 4 Key Color</string>
    <string name="dialpad_color_pref_five">Number 5 Key Color</string>
    <string name="dialpad_color_pref_six">Number 6 Key Color</string>
    <string name="dialpad_color_pref_seven">Number 7 Key Color</string>
    <string name="dialpad_color_pref_eight">Number 8 Key Color</string>
    <string name="dialpad_color_pref_nine">Number 9 Key Color</string>
    <string name="dialpad_color_pref_zero">Number 0 Key Color</string>
    <string name="dialpad_color_pref_pound">Pound Key Color</string>
    <string name="dialpad_color_pref_star">Star Key Color</string>
    <string name="dialpad_color_pref_dialButton">Call Button Color</string>
    <string name="dialpad_color_pref_deleteButton">Delete Number Button Color</string>
    <string name="dialpad_color_pref_numberText">Text Color of the Typed Number</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="prefs_reset">Reset All Colors To Stock</string>
    <string name="color_menu">Pick Dialpad Color</string>
    <string name="restart_contacts_title">Restart to apply Color</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="ics_color">Holo</string>
    <string name="set">Set</string>
    <string name="bp_theme_button">BP Theme Color</string>
    <string name="bp_text1_button">BP Text Color 1</string>
    <string name="bp_text2_button">BP Text Color 2</string>
    <string name="launcherDialer">Phone</string>
    <string name="people">People</string>
    <string name="t9_loading">Loading\u2026</string>
    <string name="t9_default_sort" translatable="false">1</string>
    <string name="t9_sort_title">T9 sorting mode</string>
    <string name="t9_sort_summary">Choose how to filter T9 results</string>
    <string name="t9_sort_name">Name matches first</string>
    <string name="t9_sort_number">Number matches first</string>
    <string name="t9_state_title">Enable T9 dialer</string>
    <string name="t9_state_summary">Enable T9 searching in dialer</string>
    <string name="t9_dial_click_title">Dial selected contact</string>
    <string name="t9_dial_click_summary">Dial the selected contact for T9</string>
    <string name="t9_add_to_contacts">Add to contacts</string>
    <string name="t9_map_row_2">2abcàáâäåɑæçǽćčá</string>
    <string name="t9_map_row_3">3defďéèêëě</string>
    <string name="t9_map_row_4">4ghiíìïîǵ</string>
    <string name="t9_map_row_5">5jklḱḱĺ</string>
    <string name="t9_map_row_6">6mnoòóöôøñŋǿḿńňő</string>
    <string name="t9_map_row_7">7pqrsßɾṕŕśřš</string>
    <string name="t9_map_row_8">8tuvťúùüûűů</string>
    <string name="t9_map_row_9">9wxyzýẃźž</string>
    <string name="contactsList">Contacts</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="contactPickerActivityTitle">Choose a contact</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="viewContactDesription">View contact</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="editGroupDescription">Edit group</string>
    <string name="insertGroupDescription">Create group</string>
    <string name="contactDetailAbout">About</string>
    <string name="contactDetailUpdates">Updates</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_search">Search</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_callNumber">Call <xliff:g id="number">%s</xliff:g></string>
    <string name="menu_addStar">Add to favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_create_contact_shortcut">Place on Home screen</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_splitAggregate">Separate</string>
    <string name="menu_editGroup">Edit</string>
    <string name="menu_deleteGroup">Delete</string>
    <string name="menu_new_contact_action_bar">Add Contact</string>
    <string name="menu_new_group_action_bar">Add Group</string>
    <string name="splitConfirmation_title">Separate contact?</string>
    <string name="splitConfirmation">This contact will be separated into multiple contacts.</string>
    <string name="menu_joinAggregate">Join</string>
    <string name="titleJoinContactDataWith">Join contacts</string>
    <string name="blurbJoinContactDataWith">Choose the contact you want to join with <xliff:g id="name">%s</xliff:g>:</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts joined</string>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="readOnlyContactWarning">You can\'t delete contacts from read-only accounts, but you can hide them in your contacts lists.</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts lists, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete information from multiple accounts.</string>
    <string name="deleteConfirmation">This contact will be deleted.</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Cancel</string>
    <string name="menu_discard">Discard</string>
    <string name="label_notes">Notes</string>
    <string name="label_sip_address">Internet call</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_title">Title</string>
    <string name="invalidContactMessage">The contact doesn\'t exist.</string>
    <string name="createContactShortcutSuccessful">Contact widget added to Home screen.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="pickerNewContactText">Create new contact</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="emailLabelsGroup">Email</string>
    <string name="imLabelsGroup">IM</string>
    <string name="postalLabelsGroup">Address</string>
    <string-array name="otherLabels">
        
        <item>Organization</item>
        
        <item>Note</item>
    </string-array>
    <string name="photoPickerNotFoundText" product="default">No pictures are available on the phone.</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="send_to_voicemail_checkbox">Send calls directly to voicemail</string>
    <string name="removePhoto">Remove photo</string>
    <string name="noContacts">No contacts.</string>
    <string name="noGroups">No groups.</string>
    <string name="noAccounts">To create groups you need an account.</string>
    <string name="noMatchingContacts">No matching contacts found.</string>
    <string name="noContactsWithPhoneNumbers">No contacts with phone numbers.</string>
    <string name="emptyGroup">No people in this group.</string>
    <string name="addPeopleToGroup">To add some, edit the group.</string>
    <string name="savingContact">Saving contact\u2026</string>
    <string name="savingDisplayGroups">Saving display options\u2026</string>
    <string name="contactSavedToast">Contact saved.</string>
    <string name="contactSavedErrorToast">Couldn\'t save contact changes.</string>
    <string name="groupSavedToast">Group saved.</string>
    <string name="groupSavedErrorToast">Couldn\'t save group changes.</string>
    <plurals name="listTotalPhoneContacts">
        <item quantity="one">1 contact with phone number</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts with phone numbers</item>
    </plurals>
    <string name="listTotalPhoneContactsZero">No contacts with phone numbers</string>
    <plurals name="listTotalAllContacts">
        <item quantity="one">1 contact</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts</item>
    </plurals>
    <string name="listTotalAllContactsZero">No contacts.</string>
    <string name="listTotalAllContactsZeroCustom">No visible contacts.</string>
    <string name="listTotalAllContactsZeroStarred">No favorites.</string>
    <string name="listTotalAllContactsZeroGroup">No contacts in <xliff:g id="name" example="Friends">%s</xliff:g></string>
    <string name="listAllContactsInAccount">Contacts in <xliff:g id="name" example="abc@gmail.com">%s</xliff:g></string>
    <string name="listSingleContact">Single contact</string>
    <string name="listCustomView">Contacts in custom view</string>
    <plurals name="listFoundAllContacts">
        <item quantity="one">1 found</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> found</item>
    </plurals>
    <string name="foundTooManyContacts">More than <xliff:g id="count">%d</xliff:g> found.</string>
    <string name="listFoundAllContactsZero">No contacts</string>
    <plurals name="searchFoundContacts">
        <item quantity="one">1 found</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> found</item>
    </plurals>
    <string name="contactsAllLabel">All contacts</string>
    <string name="contactsGroupsLabel">Groups</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerAllContactsLabel">Favorites and all contacts</string>
    <string name="dialerIconLabel">Phone</string>
    <string name="dialer_ui_title">Dialer settings</string>
    <string name="dialer_ui_orientation_title">Enable sensor orientation</string>
    <string name="dialer_ui_orientation_summary">Rotate dialer based on sensor</string>
</resources>